--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url 'https://dl.bintray.com/jetbrains/kotlin-native-dependencies' }
+        maven { url "https://kotlin.bintray.com/kotlin-eap" }
     }
     
     dependencies {
@@ -19,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://kotlin.bintray.com/kotlin-eap" }
     }
 
     def deployVersion = properties['DeployVersion']
