--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-version = 0.12.0-SNAPSHOT
+version = 0.12.0-native-1.3.20-eap-52-SNAPSHOT
 group = org.jetbrains.kotlinx
 
-kotlin_version=1.3.11
-kotlin_native_version=1.3.11
+kotlin_version=1.3.20-eap-52
+kotlin_native_version=1.3.20-eap-52
 asm_version=5.2
 slf4j_version=1.8.0-alpha2
 junit_version=4.12
