--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-version = 0.12.9-SNAPSHOT
+version = 0.12.8-1.3.50-eap-5
 group = org.jetbrains.kotlinx
 
-kotlin_version=1.3.40
+kotlin_version=1.3.50-eap-5
 asm_version=5.2
 slf4j_version=1.8.0-alpha2
 junit_version=4.12
